--- a/www/skins/default/style.css
+++ b/www/skins/default/style.css
@@ -4,21 +4,18 @@
   $Id$
   
 */
-
-*
-{
+* {
 	margin: 0;
 	outline: 0;
 	padding: 0;
 }
 
 /* HTML 5 specific */
-header,section,article,aside,footer{
+header,section,article,aside,footer {
 	display: block;
 }
 
-body
-{
+body {
 	font-family: Verdana, Geneva, Arial, Helvetica, Sans-Serif;
 	font-size: 11px;
 	line-height: 14px;
@@ -27,8 +24,7 @@ body
 	display: block;
 }
 
-.shell
-{
+.shell {
 	margin: 0px auto;
 	width: 95%;
 	min-width: 700px;
@@ -39,170 +35,141 @@ a {
 	text-decoration: underline;
 }
 
-h1 
-{
+h1 {
 	font-size: 22px;
 	line-height: 24px;
 	color: #000;
-	font-weight: normal;	
+	font-weight: normal;
 }
 
-h1 a
-{
+h1 a {
 	color: #000;
 	text-decoration: none;
 }
 
-h2 
-{
+h2 {
 	font-size: 16px;
 	line-height: 28px;
 	color: #000;
-	font-weight: normal;	
+	font-weight: normal;
 }
 
-header
-{
-	background:url(header.gif);
+header {
+	background: url(header.gif);
 	height: 78px;
 	white-space: nowrap;
 }
 
-#header-logo 
-{
+#header-logo {
 	float: left;
-	
 }
 
-#header-logo img
-{
+#header-logo img {
 	height: 50px;
 	width: 50px;
 	padding: 0 4px 0 0;
 	margin: 14px 0;
 }
 
-#header-top
-{
-	height: 47px;	
+#header-top {
+	height: 47px;
 }
 
-
-#header-bottom
-{
+#header-bottom {
 	height: 30px;
 }
 
-
-header h1
-{
+header h1 {
 	float: left;
 	display: inline;
 	margin-top: 12px;
 }
 
-header h2
-{
+header h2 {
 	float: left;
 	display: inline;
 	margin-top: 12px;
-	margin-left:15px;
+	margin-left: 15px;
 }
 
 /* begin Top Navigation links */
-
-#top-nav
-{
+#top-nav {
 	color: #000;
 	float: right;
 	margin-top: 15px;
 	white-space: nowrap;
 }
 
-#top-nav a
-{
+#top-nav a {
 	color: #000;
 }
 
-#top-nav span
-{
+#top-nav span {
 	color: #000;
 }
 
 /* begin Menu Navigation tabs */
-
-#main-nav
-{
+#main-nav {
 	float: right;
-	
 }
 
-ul.css-tabs
-{
-	margin:0 !important;
-	padding:0;
-	
+ul.css-tabs {
+	margin: 0 !important;
+	padding: 0;
 }
 
 /* single tab */
-ul.css-tabs li
-{
+ul.css-tabs li {
 	float: left;
-	padding:0; 
-	margin:0;
+	padding: 0;
+	margin: 0;
 	list-style-type: none;
 }
 
-ul.css-tabs a
-{
+ul.css-tabs a {
 	float: left;
-	display:block;
-	padding:5px 30px;
+	display: block;
+	padding: 5px 30px;
 	text-decoration: none;
-	border:1px solid #666;
-	border-bottom:0px;
+	border: 1px solid #666;
+	border-bottom: 0px;
 	height: 18px;
-	background-color:#9d9d9d; /*#efefef*/
+	background-color: #9d9d9d; /*#efefef*/
 	color: #000;
-	margin-right:2px;
-	position:relative;
-	top:1px;	
-	outline:0;
+	margin-right: 2px;
+	position: relative;
+	top: 1px;
+	outline: 0;
 	-moz-border-radius-topright: 10px;
 	-webkit-border-top-right-radius: 10px;
 	-moz-border-radius-topleft: 10px;
-	-webkit-border-top-left-radius: 10px;    
+	-webkit-border-top-left-radius: 10px;
 	border-radius: 10px 10px 0 0;
 }
 
-ul.css-tabs a:hover 
-{
-	background-color:#ddd;
-	color:#000;
+ul.css-tabs a:hover {
+	background-color: #ddd;
+	color: #000;
 }
 
 /* selected tab */
-ul.css-tabs a.current
-{
+ul.css-tabs a.current {
 	font-size: 12px;
 	font-weight: bold;
-	background-color:#ddd; /* #e0e0e0 */
-	border-bottom:1px solid #ddd;	
-	color:#000;	
-	cursor:default;
+	background-color: #ddd; /* #e0e0e0 */
+	border-bottom: 1px solid #ddd;
+	color: #000;
+	cursor: default;
 }
 
 /* begin Work Bar */
-
-#work-bar
-{
+#work-bar {
 	padding-top: 5px;
 	position: relative;
 	height: 45px;
 }
 
-#work-bar-left
-{
+#work-bar-left {
 	position: absolute;
 	left: 0px;
 	bottom: 0px;
@@ -217,27 +184,22 @@ ul.css-tabs a.current
 }
 
 /* begin Status bar */
-
-#status-header
-{
+#status-header {
 	padding: 0 0 2px 0;
 	text-align: center;
 }
 
-#status
-{
+#status {
 	background: #E0E0E0;
 	padding: 1px 5px 1px 5px;
 	font-weight: normal;
 	font-style: italic;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;   
+	-webkit-border-radius: 5px;
 	border-radius: 5px 5px 5px 5px;
 }
 
-
-#work-bar-right
-{
+#work-bar-right {
 	position: absolute;
 	right: 0px;
 	bottom: 0px;
@@ -251,109 +213,110 @@ ul.css-tabs a.current
 }
 
 /* begin Button */
-
-.buttons a, .buttons button{
-    display:block;
-    float:left;
-    margin:4px 0 0 5px;
-    background-color:#ffffff;
-    border:1px solid #000;
-    border-top:1px solid #eee;
-    border-left:1px solid #eee;
-
-    font-family: Verdana, Geneva, Arial, Helvetica, Sans-Serif;
-    font-size: 11px;
-    line-height:130%;
-    text-decoration:none;
-    /*font-weight:bold;*/
-    color: #000000; /*565656*/
-    cursor:pointer;
-    padding:5px 10px 6px 7px; /* Links */
-    
-    -moz-border-radius: 5px;
-	-webkit-border-radius: 5px;   
+.buttons a,.buttons button {
+	display: block;
+	float: left;
+	margin: 4px 0 0 5px;
+	background-color: #ffffff;
+	border: 1px solid #000;
+	border-top: 1px solid #eee;
+	border-left: 1px solid #eee;
+	font-family: Verdana, Geneva, Arial, Helvetica, Sans-Serif;
+	font-size: 11px;
+	line-height: 130%;
+	text-decoration: none;
+	/*font-weight:bold;*/
+	color: #000000; /*565656*/
+	cursor: pointer;
+	padding: 5px 10px 6px 7px; /* Links */
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border-radius: 5px 5px 5px 5px;
 }
-.buttons button{
-    width:auto;
-    overflow:visible;
-    padding:4px 10px 3px 7px; /* IE6 */
-    
-    -moz-border-radius: 5px;
-	-webkit-border-radius: 5px;   
+
+.buttons button {
+	width: auto;
+	overflow: visible;
+	padding: 4px 10px 3px 7px; /* IE6 */
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border-radius: 5px 5px 5px 5px;
 }
-.buttons button[type]{
-    padding:5px 10px 5px 7px; /* Firefox */
-    line-height:17px; /* Safari */
+
+.buttons button[type] {
+	padding: 5px 10px 5px 7px; /* Firefox */
+	line-height: 17px; /* Safari */
 }
-*:first-child+html button[type]{
-    padding:4px 10px 3px 7px; /* IE7 */
+
+*:first-child+html button[type] {
+	padding: 4px 10px 3px 7px; /* IE7 */
 }
-.buttons button img, .buttons a img{
-    margin:0 3px -3px 0 !important;
-    padding:0;
-    border:none;
-    width:16px;
-    height:16px;
+
+.buttons button img,.buttons a img {
+	margin: 0 3px -3px 0 !important;
+	padding: 0;
+	border: none;
+	width: 16px;
+	height: 16px;
 }
 
 /* STANDARD */
-
-button:hover, .buttons a:hover{
-    background-color:#dff4ff;
-    border:1px solid #c2e1ef;
-    color:#336699;
+button:hover,.buttons a:hover {
+	background-color: #dff4ff;
+	border: 1px solid #c2e1ef;
+	color: #336699;
 }
-.buttons a:active{
-    background-color:#6299c5;
-    border:1px solid #6299c5;
-    color:#fff;
+
+.buttons a:active {
+	background-color: #6299c5;
+	border: 1px solid #6299c5;
+	color: #fff;
 }
 
 /* POSITIVE */
+button.positive,.buttons a.positive {
+	color: #529214;
+}
 
-button.positive, .buttons a.positive{
-    color:#529214;
+.buttons a.positive:hover,button.positive:hover {
+	background-color: #E6EFC2;
+	border: 1px solid #C6D880;
+	color: #529214;
 }
-.buttons a.positive:hover, button.positive:hover{
-    background-color:#E6EFC2;
-    border:1px solid #C6D880;
-    color:#529214;
-}
-.buttons a.positive:active{
-    background-color:#529214;
-    border:1px solid #529214;
-    color:#fff;
+
+.buttons a.positive:active {
+	background-color: #529214;
+	border: 1px solid #529214;
+	color: #fff;
 }
 
 /* NEGATIVE */
+.buttons a.negative,button.negative {
+	color: #d12f19;
+}
 
-.buttons a.negative, button.negative{
-    color:#d12f19;
+.buttons a.negative:hover,button.negative:hover {
+	background: #fbe3e4;
+	border: 1px solid #fbc2c4;
+	color: #d12f19;
 }
-.buttons a.negative:hover, button.negative:hover{
-    background:#fbe3e4;
-    border:1px solid #fbc2c4;
-    color:#d12f19;
-}
-.buttons a.negative:active{
-    background-color:#d12f19;
-    border:1px solid #d12f19;
-    color:#fff;
+
+.buttons a.negative:active {
+	background-color: #d12f19;
+	border: 1px solid #d12f19;
+	color: #fff;
 }
 
 /* DISABLED */
-button.disabled, .buttons a.disabled, .buttons a.disabled:hover, button.disabled:hover
-{
+button.disabled,.buttons a.disabled,.buttons a.disabled:hover,button.disabled:hover
+	{
 	background-color: #c4c4c4;
 	border: 0px;
 	color: #6e6e6e;
 }
 
 /* begin Content */
-#content
-{
+#content {
 	padding: 5px 10px 5px 10px;
 	background: #9D9D9D;
 	-moz-border-radius-bottomright: 10px;
@@ -391,13 +354,13 @@ dataTables_processing {
 	width: 130px;
 	float: left;
 	padding-left: 5px;
-	white-space:nowrap;
+	white-space: nowrap;
 }
 
 .findings_sel {
 	float: left;
 	padding-left: 20px;
-	white-space:nowrap;
+	white-space: nowrap;
 }
 
 .dataTables_info {
@@ -410,10 +373,9 @@ dataTables_processing {
 	padding-right: 5px;
 }
 
-
 /* Datatables controls */
 .ft_top {
-	height:20px;
+	height: 20px;
 	background: #CCC;
 	overflow: hidden;
 }
@@ -458,14 +420,14 @@ dataTables_processing {
 }
 
 .cat-selected {
-	background: #DDD;	
+	background: #DDD;
 }
 
 .cat-not-selected {
-	background: #A1A1A1;	
+	background: #A1A1A1;
 }
 
-.cat-selected, .cat-not-selected {
+.cat-selected,.cat-not-selected {
 	display: inline-block;
 	height: 17px;
 	border: 1px #5C5C5C solid;
@@ -480,7 +442,7 @@ dataTables_processing {
 	background: #CCC;
 	cursor: pointer;
 }
-	
+
 .filterExpand {
 	background: #CCC url('../../img/arrow_down.png') no-repeat center right;
 	width: 50px;
@@ -550,152 +512,131 @@ dataTables_processing {
 /* rowPanel edit finding form */
 .rowPanel .myform {
 	display: table;
-	margin: 0 auto;	
+	margin: 0 auto;
 	color: white;
 }
-.rowPanel .myform h3, .rowPanel .myform .buttons {
+
+.rowPanel .myform h3,.rowPanel .myform .buttons {
 	display: table;
-	margin: 0 auto;	
+	margin: 0 auto;
 }
+
 .rowPanel .myform table tbody td {
 	padding: 0;
 }
 
 /* rowPanel history */
-
 .rowPanel h3 {
 	width: 110px;
-	margin:0 auto;
+	margin: 0 auto;
 	color: white;
 	white-space: nowrap;
 }
 
 /* tables */
-table {
+.data_table {
 	margin: 0 auto;
 	clear: both;
 	width: 100%;
 }
 
-table thead tr th.cb {
+.data_table thead tr th.cb {
 	padding: 3px 10px;
 }
 
-table thead tr th {
+.data_table thead tr th {
 	background-color: #e6EEEE;
 	border: 1px solid white;
 	font-weight: bold;
 	padding: 3px 18px 3px 10px;
-	cursor: pointer;
-	* cursor: hand;
+	cursor: pointer; *
+	cursor: hand;
 }
 
-table tfoot th {
+.data_table tfoot th {
 	padding: 3px 18px 3px 10px;
 	border: 1px solid black;
 	font-weight: bold;
 }
 
-table tbody td {
+.data_table tbody td {
 	padding: 3px 10px;
 	vertical-align: top;
 }
 
-table td.center {
+.data_table td.center {
 	text-align: center;
 }
 
 /* DataTables sorting */
-.sorting_asc
-{
-	background: #E6EEEE url('../../img/sort_asc.png') no-repeat center right;
+.sorting_asc {
+	background: #E6EEEE url('../../img/sort_asc.png') no-repeat center right
+		;
 }
 
-.sorting_desc
-{
-	background: #E6EEEE url('../../img/sort_desc.png') no-repeat center right;
+.sorting_desc {
+	background: #E6EEEE url('../../img/sort_desc.png') no-repeat center
+		right;
 }
 
-.sorting
-{
-	background: #E6EEEE url('../../img/sort_both.png') no-repeat center right;
+.sorting {
+	background: #E6EEEE url('../../img/sort_both.png') no-repeat center
+		right;
 }
 
-.sorting_asc_disabled
-{
-	background: #E6EEEE url('../../img/sort_asc_disabled.png') no-repeat center right;
+.sorting_asc_disabled {
+	background: #E6EEEE url('../../img/sort_asc_disabled.png') no-repeat
+		center right;
 }
 
-.sorting_desc_disabled
-{
-	background: #E6EEEE url('../../img/sort_desc_disabled.png') no-repeat center right;
+.sorting_desc_disabled {
+	background: #E6EEEE url('../../img/sort_desc_disabled.png') no-repeat
+		center right;
 }
 
 /* Row classes */
 tr.even {
-	background-color:#F0F0F6;
+	background-color: #F0F0F6;
 }
 
 tr.odd {
 	background-color: white;
 }
 
-tr.s1
-{
+tr.s1 {
 	color: darkred;
 }
 
-tr.s2
-{
-	color: orangered; 
+tr.s2 {
+	color: orangered;
 }
 
-tr.s3
-{
+tr.s3 {
 	color: goldenrod;
 }
 
-tr.s0, tr.s4
-{
+tr.s0,tr.s4 {
+	
 }
 
-tr.select
-{
+tr.select {
 	background-color: #D7E8F2;
-	cursor: pointer;
 }
 
 /* table cell images */
-table tbody tr td img
-{
-	margin:0 3px;
+table tbody tr td img {
+	margin: 0 3px;
 }
 
 /* table cell links */
-table tbody td a 
-{
-    text-decoration:none;
-    color: #000;
-}
-
-/* Issue form overlay table layout */
-#tableIssueForm, #tableIssueForm td {
-	width: auto;
-	padding: 0; 
-	margin: 0; 
-	border: 0; 
-	white-space:nowrap;
-	vertical-align: top;
-}
-
-#tableIssueForm .buttons {
-	display: table;
-	margin: 0 auto;	
+table tbody td a {
+	text-decoration: none;
+	color: #000;
 }
 
 /* Datatables paginate buttons */
-.paginate_enabled_first, .paginate_enabled_previous, .paginate_enabled_next, .paginate_enabled_last,
-.paginate_disabled_first, .paginate_disabled_previous, .paginate_disabled_next, .paginate_disabled_last {
+.paginate_enabled_first,.paginate_enabled_previous,.paginate_enabled_next,.paginate_enabled_last,.paginate_disabled_first,.paginate_disabled_previous,.paginate_disabled_next,.paginate_disabled_last
+	{
 	height: 16px;
 	width: 16px;
 	margin-left: 3px;
@@ -734,25 +675,21 @@ table tbody td a
 	background-image: url('../../img/arrow_last_disabled.png');
 }
 
-
 /* begin Overlay */
-.myoverlay
-{
-	/* must be initially hidden */
-	display:none;
+.myoverlay { /* must be initially hidden */
+	display: none;
 }
 
 /* begin Form */
-.myoverlay
-{	
+.myoverlay {
 	background-color: #333;
 	padding: 15px 20px;
 	color: #eee;
 	width: 400px;
 	margin: 0 auto;
 	position: relative;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border-radius: 5px;
 }
 
@@ -760,46 +697,49 @@ table tbody td a
 	width: 650px;
 }
 
-.myform fieldset
-{
+#addScan {
+	width: 550px;
+}
+
+.myform fieldset {
 	border: 0;
 	margin: 0;
 	padding: 0;
-	
 }
 
-.myform h2 	{ color:#eee; margin-top:0px; }
-.myform p 	{ font-size:11px; }
+.myform h2 {
+	color: #eee;
+	margin-top: 0px;
+}
 
-.myform input 
-{
+.myform p {
+	font-size: 11px;
+}
+
+.myform input {
 	border: 1px solid #444;
 	background-color: #666;
 	padding: 5px;
 	color: #ddd;
 	font-size: 12px;
 	margin: 2px;
-	
 	/* CSS3 spicing */
-	text-shadow:1px 1px 1px #000;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
+	text-shadow: 1px 1px 1px #000;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 }
 
-.myform input:focus
-{ 
-	color:#fff; 
-	background-color:#777;
+.myform input:focus {
+	color: #fff;
+	background-color: #777;
 }
 
-.myform input:active
-{ 
-	background-color:#888; 
+.myform input:active {
+	background-color: #888;
 }
 
-/* button */
-/*.myform button, .myoverlay button
+/* button */ /*.myform button, .myoverlay button
 {
 	outline:0;
 	border:1px solid #666;	
@@ -812,33 +752,28 @@ table tbody td a
 	color: #FFF;
 	cursor: pointer;
 	padding: 3px 7px;
-}*/
-
-/* error message */
+}*/ /* error message */
 .error {
 	height: 15px;
-	background-color:#FFFE36;
-	font-size:11px;
-	border:1px solid #E1E16D;
-	padding:3px 10px;
-	color:#000;
+	background-color: #FFFE36;
+	font-size: 11px;
+	border: 1px solid #E1E16D;
+	padding: 3px 10px;
+	color: #000;
 	z-index: 9999;
-	
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px; 
-	-moz-border-radius-bottomleft:0;
-	-moz-border-radius-topleft:0;	
-	-webkit-border-bottom-left-radius:0; 
-	-webkit-border-top-left-radius:0;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius-bottomleft: 0;
+	-moz-border-radius-topleft: 0;
+	-webkit-border-bottom-left-radius: 0;
+	-webkit-border-top-left-radius: 0;
 	border-radius: 0 4px 4px 0;
-	
-	-moz-box-shadow:0 0 6px #ddd;
-	-webkit-box-shadow:0 0 6px #ddd;	
+	-moz-box-shadow: 0 0 6px #ddd;
+	-webkit-box-shadow: 0 0 6px #ddd;
 }
 
 /* field label */
-label 
-{
+label {
 	display: inline;
 	color: white;
 	/*margin-top: 15px;*/
@@ -856,6 +791,6 @@ label
 	margin-top: -10px;
 	background: #000;
 	color: #FFF;
-        padding-top:2em;
-        padding-bottom:2em;
+	padding-top: 2em;
+	padding-bottom: 2em;
 }
