--- a/www/jmvc/seccubus/tabs/tabs.css
+++ b/www/jmvc/seccubus/tabs/tabs.css
@@ -1,5 +1,5 @@
 .seccubus_tabs { padding: 0px; margin: 0px; }
-.seccubus_tabs li { float: right; padding: 8px; background-color: #9D9D9D; list-style: none; cursor: default; margin-left: 5px; -moz-border-radius-topright: 10px; -webkit-border-top-right-radius: 10px; -moz-border-radius-topleft: 10px; -webkit-border-top-left-radius: 10px; border-radius: 10px 10px 0 0; }
+.seccubus_tabs li { float: left; padding: 8px; background-color: #9D9D9D; list-style: none; cursor: default; margin-left: 3px; -moz-border-radius-topright: 10px; -webkit-border-top-right-radius: 10px; -moz-border-radius-topleft: 10px; -webkit-border-top-left-radius: 10px; border-radius: 10px 10px 0 0; }
 .seccubus_tabs li:hover { color: #000; background-color: #ddd; cursor: pointer; }
 .seccubus_tabs li a { color: #000; font-weight: bold; text-decoration: none; }
 .seccubus_tabs li.active { color: #000; background-color: #ddd; cursor: default; border-bottom: 1px solid #ddd; }
