--- a/jmvc/seccubus/config_item/list/views/config_item.ejs
+++ b/jmvc/seccubus/config_item/list/views/config_item.ejs
@@ -1,2 +1,2 @@
-<h3><%= name %> <a href='javascript://' class='destroy'>X</a></h3>
-<p><%= description %></p>
+<div class='<%= result %>'><h3><%= name %></h3>
+<p><%= message %></p></div>
