ConfigTest and UpToDate json APIs oprational and integrated into the GUI

--- a/jmvc/seccubus/up_to_date/list/views/up_to_date.ejs
+++ b/jmvc/seccubus/up_to_date/list/views/up_to_date.ejs
@@ -1,5 +1,5 @@
-<b><%= status %></b>
+<div class='<%= status %>'><b><%= status %></b>
 <% if(link) { %>
 	Download link: <a href='<%= link %>'><%= link %></a>
 <% } %>
-<p><br><%= message %></p>
+<p><br><pre><%= message %></pre></p></div>
