--- a/jmvc/jquery/view/ejs/qunit.html
+++ b/jmvc/jquery/view/ejs/qunit.html
@@ -6,7 +6,7 @@
                 margin: 0px; padding: 0px;
             }
         </style>
-		<script type='text/javascript' src='../../../steal/steal.js?jquery/view/ejs/test/qunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js?jquery/view/ejs/ejs_test.js'></script>
     </head>
     <body>
 
