--- a/jmvc/seccubus/seccubus.css
+++ b/jmvc/seccubus/seccubus.css
@@ -30,6 +30,7 @@ div.shell {
 	min-width: 700px;
 }
 
+/* Left side div */
 div.left { 
 	width: 200px;
 	left: 0px;
@@ -38,26 +39,26 @@ div.left {
 	float: left;
 }
 
+select.left {
+	width: 180px;
+	max-width: 180px;
+}
+
+
+/* Div next to a left side div */
 div.main { 
 	margin-left: 260px;
 	margin-right: 50px;
 }
 
+/* Div is there is no left side div */
 div.full {
 	margin-left: 0px;
 	margin-right: 50px; 
 	float: left;
 }
 
-select.workspace {
-	max-width: 180px;
-}
-
-select.scan {
-	width: 180px;
-	max-width: 180px;
-	size: 100;
-}
+/* Generic elements */
 
 a {
 	cursor: pointer;
