--- a/jmvc/seccubus/workspace/selector/views/init.ejs
+++ b/jmvc/seccubus/workspace/selector/views/init.ejs
@@ -1,6 +1,5 @@
-<select id='seccubus.workspace.selector' class='workspace'>
-	<%for(var i = 0; i < this.length ; i++){%>
-		<%= this[i] %> >
-			<%== $.View('//seccubus/workspace/selector/views/workspace.ejs', this[i] )%>
-	<%}%>
-</select>
+<% for(var i = 0; i < this.length ; i++) { %>
+	<option <%= this[i] %> value='<%= this[i].id %>'>
+		<%== $.View('//seccubus/workspace/selector/views/workspace.ejs', this[i] )%>
+	</option>
+<%}%>
