--- a/jmvc/seccubus/scan/select/views/init.ejs
+++ b/jmvc/seccubus/scan/select/views/init.ejs
@@ -1,11 +1,11 @@
-<select multiple class='scan' size=40>
-	<% if( this.length > 0 ) { %>
-		<%for ( var i = 0; i < this.length ; i++ ){%>
-			<%== $.View('//seccubus/scan/select/views/scan.ejs', { object: this[i] } )%>
-		<%}%>
-	<% } else { %>
-		<option disabled>
-			No scans found
+<% if( this.length > 0 ) { %>
+	<%for ( var i = 0; i < this.length ; i++ ){%>
+		<option <%= this[i] %> value='<%= this[i].id %>'>
+			<%== $.View('//seccubus/scan/select/views/scan.ejs', this[i] )%>
 		</option>
-	<% } %>
-</select>
+	<%}%>
+<% } else { %>
+	<option disabled>
+		No scans found
+	</option>
+<% } %>
