--- a/jmvc/seccubus/workspace/select/views/init.ejs
+++ b/jmvc/seccubus/workspace/select/views/init.ejs
@@ -1,5 +1,10 @@
+<% count = 0 %>
 <% for(var i = 0; i < this.length ; i++) { %>
 	<option <%= this[i] %> value='<%= this[i].id %>'>
 		<%== $.View('//seccubus/workspace/select/views/workspace.ejs', this[i] )%>
 	</option>
-<%}%>
+<% count++ %>
+<% } %>
+<% if ( count == 0 ) { %>
+	<%== $.View('//seccubus/workspace/select/views/no_workspaces.ejs') %>
+<% } %>
