Unescaped HTML is better

--- a/jmvc/seccubus/finding/table/views/finding.ejs
+++ b/jmvc/seccubus/finding/table/views/finding.ejs
@@ -4,5 +4,5 @@
 <td><%= port %></td>
 <td><%= plugin %></td>
 <td><%= severity %>. <%= severityName %></td>
-<td><%= find %></td>
+<td><%== this.asHTML("find") %></td>
 <td><%= remark %></td>
