--- a/jmvc/seccubus/finding/table/views/init.ejs
+++ b/jmvc/seccubus/finding/table/views/init.ejs
@@ -20,6 +20,6 @@
 		<% } %>
 	<% } %>
 	<% if ( count == 0 ) { %>
-		<tr><td collspan=7>No findings match you selection</td></tr>
+		<tr><td colspan=7>No findings match you selection</td></tr>
 	<% } %>
 </tbody>
