More generic error handling

--- a/jmvc/seccubus/finding/table/views/error.ejs
+++ b/jmvc/seccubus/finding/table/views/error.ejs
@@ -1,3 +1,4 @@
+<% // Display table with error message %>
 <thead><tr>
 	<th>IP</th>
 	<th>Hostname</th>
@@ -8,5 +9,5 @@
 	<th>Severity</th>
 </tr></thead>
 <tbody>
-	<tr><td colspan=7>Please select one or more scans</td></tr>
+	<tr><td colspan=7><%= message %></td></tr>
 </tbody>
