Improved error handling workspace and scan selector

--- a/jmvc/seccubus/scan/select/views/init.ejs
+++ b/jmvc/seccubus/scan/select/views/init.ejs
@@ -8,5 +8,5 @@
 	<% } %>
 <% } %>
 <% if ( count == 0 ) { %>
-	<%== $.View('//seccubus/scan/select/views/no_scans') %>
+	<%== $.View('//seccubus/scan/select/views/error.ejs',{ message : "No scans found"}) %>
 <% } %>
