--- a/jmvc/seccubus/workspace/select/views/init.ejs
+++ b/jmvc/seccubus/workspace/select/views/init.ejs
@@ -1,10 +1,10 @@
-<% count = 0 %>
-<% for(var i = 0; i < this.length ; i++) { %>
-	<option <%= this[i] %> value='<%= this[i].id %>'>
-		<%== $.View('//seccubus/workspace/select/views/workspace.ejs', this[i] )%>
-	</option>
-<% count++ %>
-<% } %>
-<% if ( count == 0 ) { %>
+<% if ( this.length == 0 ) { %>
 	<%== $.View('//seccubus/workspace/select/views/no_workspaces.ejs') %>
+<% } else { %>
+	<option selected value=-1 disabled=true>Select a workspace to start</option>
+	<% for(var i = 0; i < this.length ; i++) { %>
+		<option <%= this[i] %> value='<%= this[i].id %>'>
+			<%== $.View('//seccubus/workspace/select/views/workspace.ejs', this[i] )%>
+		</option>
+	<% } %>
 <% } %>
