--- a/jmvc/seccubus/finding/filter/views/error.ejs
+++ b/jmvc/seccubus/finding/filter/views/error.ejs
@@ -1,25 +1,22 @@
 <% %>
-<% var values = [1,2,3,4,5,6,99];
-   var names = ["New","Changed","Open","No Issue","Gone","Closed","MASKED"];
-%>
-<tbody>
-	<tr>
-		<% for(var i = 0;i < values.length;i++) { %>
-			<td><button value=<%= values[i] %> 
-				disabled=true
-				<% if(sStatus == values[i]) { %>
-					class='setStatus selected'
-				<% } else { %>
-					class='setStatus'
-				<% } %>
-				>
-				<%= names[i] %> (0)
-			</button></td>
-		<% } %>
-	</tr>
-	<% if ( typeof message != 'undefined' ) { %>
-	        <tr>
-			<td colspan=7><%= message %></td>
-		</tr>
-	<% } %>
-</tbody>
+
+Host:
+<select disabled=true filter='host' class='filter hostFilter'>
+	<option selected disabled=true>-----</option>
+</select>
+
+Hostname:
+<select disabled=true filter='hostName' class='filter hostNameFilter'>
+	<option selected disabled=true>-----</option>
+</select>
+
+Port:
+<select disabled=true filter='port' class='filter portFilter'>
+	<option selected disabled=true>-----</option>
+</select>
+
+Plugin:
+<select disabled=true filter='plugin' class='filter pluginFilter'>
+	<option selected disabled=true>-----</option>
+</select>
+<% if( typeof message != "undefined" ) { %><br><%= message %><% } %>
