--- a/jmvc/seccubus/finding/status/views/init.ejs
+++ b/jmvc/seccubus/finding/status/views/init.ejs
@@ -1,4 +1,4 @@
-<% if(typeof this[0].error != "undefined") { %>
+<% if(typeof this[0] != "undefined" && typeof this[0].error != "undefined") { %>
 	<%== $.View('//seccubus/finding/status/views/error.ejs',{ message : this[0].error, sStatus : sStatus }) %>
 <% } else { %>
 	<%	var counter = [0,0,0,0,0,0,0];
