--- a/jmvc/seccubus/scan/select/views/init.ejs
+++ b/jmvc/seccubus/scan/select/views/init.ejs
@@ -1,5 +1,5 @@
 <% count = 0  %>
-<% if(typeof this[0].error != "undefined" ) { %>
+<% if(typeof this[0] != "undefined" && typeof this[0].error != "undefined" ) { %>
 	 <%== $.View('//seccubus/scan/select/views/error.ejs',{ message : this[0].error }) %>
 <% } else { %>
 	<%for ( var i = 0; i < this.length ; i++ ){%>
