Quick status update buttons work with fixtures

--- a/jmvc/seccubus/finding/table/views/error.ejs
+++ b/jmvc/seccubus/finding/table/views/error.ejs
@@ -9,7 +9,7 @@
                         <% } else { %>
                                 class='asc'
                         <% } %>
-                <% } else { %>
+                <% } else if (columns[i]) { %>
 			class='both'
 		<% } %>
 	>
@@ -18,5 +18,5 @@
 <% } %>
 </tr></thead>
 <tbody>
-	<tr><td colspan=7><%= message %></td></tr>
+	<tr><td colspan=<%= columns.length + 1 %>><%= message %></td></tr>
 </tbody>
