UpdateFInding json  API and quick status changes buttons work

--- a/jmvc/seccubus/finding/table/views/init.ejs
+++ b/jmvc/seccubus/finding/table/views/init.ejs
@@ -49,7 +49,7 @@
 			<% } %>
 		<% } %>
 		<% if ( count == 0 ) { %>
-			<tr><td colspan=columns.length>No findings match you selection</td></tr>
+			<tr><td colspan=<%= columns.length %>>No findings match you selection</td></tr>
 		<% } %>
 	</tbody>
 <% } %>
