Sort workspaces by name

--- a/jmvc/seccubus/workspace/select/views/init.ejs
+++ b/jmvc/seccubus/workspace/select/views/init.ejs
@@ -1,3 +1,5 @@
+<% %>
+<% this.sort(function(a,b) { return a.name > b.name }); %>
 <% if ( this.length == 0 ) { %>
 	<%== $.View('//seccubus/workspace/select/views/no_workspaces.ejs') %>
 <% } else { %>
