--- a/jmvc/seccubus/finding/table/views/finding.ejs
+++ b/jmvc/seccubus/finding/table/views/finding.ejs
@@ -24,6 +24,12 @@
 					<a href='javascript://' value='99' class='small changeState'>MASK</a>
 				<% } %>
 				</div>
+			<% } else if (columns[i+1] == "select") { %>
+				<% if( checked.all) { %>
+					<img src='img/checkbox_filled.png' class='selectFinding' checked="true" finding='<%= this.id %>'>
+				<% } else  { %>
+					<img src='img/checkbox_blank.png' class='selectFinding' finding='<%= this.id %>'>
+				<% } %>
 			<% } else { %>
 				Unknown colum <%= columns[i+1] %>
 			<% } %>
