--- a/jmvc/seccubus/finding/table/views/finding.ejs
+++ b/jmvc/seccubus/finding/table/views/finding.ejs
@@ -26,7 +26,7 @@
 				</div>
 			</td>
 		<% } else if (columns[i+1] == "select") { %>
-			<td>
+			<td class='center'>
 				<% if( checked.all) { %>
 					<img src='img/checkbox_filled.png' class='selectFinding' checked="true" finding='<%= this.id %>'>
 				<% } else  { %>
