--- a/jmvc/seccubus/finding/table/views/finding.ejs
+++ b/jmvc/seccubus/finding/table/views/finding.ejs
@@ -28,7 +28,7 @@
 		<% } else if (columns[i+1] == "select") { %>
 			<td class='center'>
 				<% if( checked.all) { %>
-					<img src='img/checkbox_filled.png' class='selectFinding' checked="true" finding='<%= this.id %>'>
+					<img src='img/checkbox_filled.png' class='selectFinding' checked="checked" finding='<%= this.id %>'>
 				<% } else  { %>
 					<img src='img/checkbox_blank.png' class='selectFinding' finding='<%= this.id %>'>
 				<% } %>
@@ -40,6 +40,8 @@
 		<% } %>
 	<% } else if (columns[i] == "find") { %>
 		<td><%== this.asHTML("find") %></td>
+	<% } else if (columns[i] == "remark") { %>
+		<td><%== this.asHTML("remark") %></td>
 	<% } else { %>
 		<td><%= this[columns[i]] %></td>
 	<% } %>
