--- a/jmvc/seccubus/finding/status/views/init.ejs
+++ b/jmvc/seccubus/finding/status/views/init.ejs
@@ -12,7 +12,7 @@
 				host		: fHost,
 				hostName	: fHostName,
 				port		: fPort,
-				plugin		: fPlugin,
+				plugin		: fPlugin
 			})) { 
 				counter[this[i].status]++; 
 			} 
