--- a/jmvc/seccubus/finding/table/views/error.ejs
+++ b/jmvc/seccubus/finding/table/views/error.ejs
@@ -3,7 +3,7 @@
 	columns         : columns,
 	orderBy         : orderBy,
 	descending      : descending,
-	checked		: checked,
+	checked		: checked
 }) %>
 <tbody>
 	<tr><td colspan=<%= columns.length/2 %>><%= message %></td></tr>
