Add workspace dialog is working with fixtures. Next step backend.

--- a/jmvc/seccubus/seccubus.css
+++ b/jmvc/seccubus/seccubus.css
@@ -10,6 +10,11 @@
 	padding: 0;
 }
 
+/* Hidden */
+.hidden {
+	display: none;
+}
+
 /* HTML 5 specific */
 header,section,article,aside,footer {
 	display: block;
