--- a/jmvc/seccubus/workspace/create/views/init.ejs
+++ b/jmvc/seccubus/workspace/create/views/init.ejs
@@ -1,9 +1,3 @@
-<h2>New workspace</h2>
-<p>
-	<label for='name'>Name</label> <br/>
-	<input type='input' name='name' id='name'/>
-</p>
-<p><label for='description'>Description</label><br/>
-<textarea name='description' id='description'/></textarea>
-</p>
-<p><input type='submit' value='Create'/></p>
+<label for='name'>Name:</label><input type='input' name='name' id='name'/>
+<input type='submit' value='Create'/>
+<input type='button' class="cancel" value='Cancel'/>
