--- a/jmvc/seccubus/workspace/table/views/init.ejs
+++ b/jmvc/seccubus/workspace/table/views/init.ejs
@@ -1,17 +1,21 @@
 <% %>
-<thead>
-	<tr>
-		<th>Name</td>
-		<th># of scans</td>
-		<th># of findings</td>
-		<th>Last scan</td>
-		<th>Action</td>
-	</tr>
-</thead>
-<tbody>
-	<%for(var i = 0; i < this.length ; i++){%>
-		<tr <%= this[i] %> >
-			<%== $.View('//seccubus/workspace/table/views/workspace.ejs', this[i] )%>
+<% if(typeof(noHead) == "undefined" || noHead == false) { %>
+		<thead>
+		<tr>
+			<th>Name</td>
+			<th># of scans</td>
+			<th># of findings</td>
+			<th>Last scan</td>
+			<th>Action</td>
 		</tr>
-	<%}%>
-<tbody>
+	</thead>
+	<tbody>
+<% } %>
+<%for(var i = 0; i < this.length ; i++){%>
+	<tr <%= this[i] %> >
+		<%== $.View('//seccubus/workspace/table/views/workspace.ejs', this[i] )%>
+	</tr>
+<%}%>
+<% if(typeof(noHead) == "undefined" || noHead == false) { %>
+	<tbody>
+<% } %>
