--- a/jmvc/widgets/modal/modal.css
+++ b/jmvc/widgets/modal/modal.css
@@ -1,11 +1,13 @@
 /* Z-index of #mask must lower than #boxes .window */
-#widgetsModalMask {
+.mask {
   position:absolute;
   top : 0;
   left : 0;
   z-index:9000;
   background-color:#000;
   display:none;
+  opacity: 1;
+  filter:alpha(opacity:100); /* For IE8 and earlier */
 }
    
 .widgetsModalWindow {
